fixed overflow of line-height at card image alt text when too long.

--- a/blocks/card/card.css
+++ b/blocks/card/card.css
@@ -8,6 +8,8 @@
   background: white;
   border-radius: 10px;
   overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 .card > .button_type_delete {
   background: transparent url("../../assets/icons/Trash.svg") center no-repeat;
